unpackaged/objects/aspnet_Paths__c.object
<CustomObject>
    <description>Created by API</description>
    <fields>
        <fullName>ApplicationId__c</fullName>
        <label>ApplicationId</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LoweredPath__c</fullName>
        <label>LoweredPath</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>PathId__c</fullName>
        <label>PathId</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Path__c</fullName>
        <label>Path</label>
        <type>TextArea</type>
    </fields>
    <label>aspnet_Paths</label>
    <nameField>
        <label>aspnet_Paths</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>aspnet_Paths</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>